# Multi-Channel-Bridge-For-NDI-and-OBS-Studio

./: .gitignore  AV-GOVERNOR.md  CMakeLists.txt  EASIEST-BUILD-STEPS.txt  INSTALL-AND-USE.md  INSTALL-BOTH-PCS.md  LICENSE-NOTICE.txt  README.md  RELEASE-NOTES.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  UPLOAD-TO-GITHUB.md  UPSTREAM-NOTES.md  VALIDATION.md  VERSION  buildspec.json
.github/workflows/: build-project.yaml  build-windows.yml  push.yaml
data/locale/: en-US.ini
docs/: ARCHITECTURE.md
docs/receiver-clock-lab/: AI-WORKLOG.md  DESIGN.md  DIAGNOSTICS.md  INSTALL-TEST-BUILD.md  README.md  REPRODUCTION.md
hotfix/bridge/: av-governor.cpp  av-governor.h  downstream-sync-core.cpp  downstream-sync-core.h  multichannel-bridge.cpp  multichannel-bridge.h  sender-sync-core.cpp  sender-sync-core.h
hotfix/scripts/: patch_distroav.py
installer/: MultichannelBridge.iss  NDIMultichannelBridge.iss
scripts/: patch_distroav.py
src/: audio-pair-assembler.hpp  bridge-common.hpp  bridge-sources.cpp  bridge-sources.hpp  control-dialog.cpp  control-dialog.hpp  multichannel-output.cpp  multichannel-output.hpp  ndi-runtime.cpp  ndi-runtime.hpp  ndi-source.cpp  plugin-main.cpp  receiver-clock-diagnostics.cpp  receiver-clock-diagnostics.h  receiver-hub.cpp  receiver-hub.hpp  timeline-mapper.hpp
tests/: av-governor-tests.cpp  downstream-sync-core-tests.cpp  receiver-clock-diagnostics-test.cpp  run-core-tests.sh  sender-sync-core-tests.cpp  test-installer-state.ps1  test_callback_safety.py  test_compact_ui.py  test_core.cpp  test_governor_safety.py  test_installer_contract.py  test_parameter_paths.py  test_receiver_safety.py  test_release_metadata.py
tools/: Install-MultichannelBridge.cmd  Install-MultichannelBridge.ps1  Uninstall-MultichannelBridge.cmd  Uninstall-MultichannelBridge.ps1  analyze-receiver-clock-log.py
